# esp32-c3-p1-bridge

./: .gitignore  Cargo.toml  justfile
.cargo/: config.toml
bridge/: .gitignore  Cargo.toml  sdkconfig.defaults
bridge/.cargo/: config.toml
bridge/src/: main.rs  wifi.rs
client/: Cargo.toml
client/src/: main.rs
esp_buffered_serial/: Cargo.toml
esp_buffered_serial/src/: buffered_serial.rs  lib.rs  optional_pin.rs  serial_util.rs
message/: Cargo.toml
message/src/: lib.rs
once_mut/: Cargo.toml
once_mut/src/: lib.rs
p1_parser/: Cargo.toml
p1_parser/src/: lib.rs
src/: main.rs  rgb.rs
