[workspace]

members = [
    "p1_parser",
    "message",
    "client",
]

# 'bridge' is not a member because it will not compile successfully for the host arch.
# See https://ferrous-systems.com/blog/test-embedded-app/#structuring-the-project-for-host--and-cross-compilation
# This method will result in two .lock files.
exclude = ["bridge"]
