[package]
name = "bridge"
version = "0.1.0"
authors = ["IsaacDynamo <isaacdynamo@gmail.com>"]
edition = "2021"

# [profile.release]
# opt-level = "s"

# [profile.dev]
# debug = true # Symbols are nice and they don't increase the size on Flash
# opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart", ] }
esp-idf-hal = "0.40"
esp-idf-svc = { version = "0.45", features = ["experimental", "alloc"] }
esp32c3 = "=0.4"
embedded-svc = "0.24"
anyhow = "1.0"
libc = "0.2"
log = "0.4"
heapless = "0.7.16"
thiserror = "1.0.38"
p1_parser = { path = "../p1_parser" }
message = { path = "../message" }
postcard = "1.0.4"

[build-dependencies]
embuild = "0.30.4"
