[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
message = { path = "../message" }
postcard = "1.0.4"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
tokio = { version = "1.28.0", features = ["macros"] }
chrono = "0.4.24"
